--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1243,7 +1243,7 @@ footer a {
 
     nav ul {
         gap: 10%;
-
+        margin-right: 20px;
     }
 
     nav li {
@@ -1290,9 +1290,6 @@ footer a {
         height: 50%;
     }
 
-    .imggg {
-        width: 180%;
-    }
 
     .containerAbout {
         margin-top: 20px;
