--- a/public/css/projets.css
+++ b/public/css/projets.css
@@ -902,7 +902,7 @@ img {
 
     nav ul {
         gap: 10%;
-
+        margin-right: 40px;
     }
 
     nav li {
@@ -941,6 +941,7 @@ img {
         flex-direction: row;
         justify-content: center;
         width: 100%;
+        margin-bottom: 20px;
     }
 
     .grp1 {
@@ -951,6 +952,7 @@ img {
     img {
         width: 100%;
         height: 100%;
+        margin-top: 20px;
     }
 
     .grp2 {
@@ -989,6 +991,7 @@ img {
         width: 60%;
         height: 175px;
         overflow: hidden;
+        margin-right: 10px;
     }
 
     .card .description {
@@ -1000,6 +1003,11 @@ img {
 
     .title {
         padding: 10px;
+    }
+
+    .title p {
+        margin-top: 30px;
+
     }
 
     footer .imggg {
@@ -1031,9 +1039,6 @@ img {
         height: 50%;
     }
 
-    .imggg {
-        width: 180%;
-    }
 
     .imggg {
         gap: 4%;
@@ -1046,11 +1051,22 @@ img {
 @media (min-width: 481px) and (max-width: 768px) {
     /* Ajoutez ici les styles pour les écrans de taille moyenne (tablettes) */
     body {
-        /* ... Ajoutez les styles spécifiques pour les tablettes ... */
     }
 
     nav {
-        /* ... Ajoutez les styles spécifiques pour les tablettes ... */
+        width: 100%;
+        gap: 0;
+    }
+
+    .imggg {
+        width: 50%;
+    }
+
+    nav ul {
+        width: 50%;
+        gap: 0;
+        justify-content: space-between;
+        margin-right: 40px;
     }
 
     /* ... Autres styles pour les tablettes ... */
