--- a/public/css/projets.css
+++ b/public/css/projets.css
@@ -1060,6 +1060,7 @@ img {
 
     .imggg {
         width: 50%;
+
     }
 
     nav ul {
@@ -1069,5 +1070,59 @@ img {
         margin-right: 40px;
     }
 
+    .grp1 {
+        gap: 0;
+    }
+    .grp2 {
+        gap: 0;
+    }
+    .grp3 {
+        gap: 0;
+    }
+    .grp4 {
+        gap: 0;
+    }
+
+    .card {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .description {
+        width: 100%;
+
+    }
+
+    .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+        padding: 20px;
+        align-items: center;
+    }
+
+    .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .right img {
+        width: 90%;
+    }
+
+    .title{
+
+        width: 100%;
+    }
+
+    .scrollable-content{
+        padding: 20px;
+    }
     /* ... Autres styles pour les tablettes ... */
 }
